<resources>
    <string name="search_hero">Search Hero</string>
    <string name="app_name">SuperHeroApp</string>
    <string name="tittle">Super Hero</string>
    <string name="name">Name:</string>
    <string name="full_name">Full Name:</string>
    <string name="race">Race:</string>
    <string name="biography">Biography</string>
    <string name="appearance">Appearance</string>
    <string name="work">Work</string>
    <string name="connections">Connections</string>
    <string name="powerstats">PowerStats</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="speed">Speed:</string>
    <string name="durability">Durability:</string>
    <string name="power">Power:</string>
    <string name="combat">Combat:</string>
    <string name="alter_egos">Alter Egos:</string>
    <string name="aliases">Aliases:</string>
    <string name="place_of_birth">Place of Birth:</string>
    <string name="first_appearance">First Appearance:</string>
    <string name="publisher">Publisher:</string>
    <string name="alignment">Alignment:</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="occupations">Occupations:</string>
    <string name="base">Base:</string>
    <string name="group_affiliations">Group Affiliations:</string>
    <string name="relatives">Relatives:</string>
</resources>