<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intelligence" />

        <TextView
            android:id="@+id/intelligence"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strength" />

        <TextView
            android:id="@+id/strength"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/speed"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durability" />

        <TextView
            android:id="@+id/durability"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power" />

        <TextView
            android:id="@+id/power"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combat" />

        <TextView
            android:id="@+id/combat"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>