<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/gender"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <TextView
            android:id="@+id/heroHeight"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/heroWeight"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eye_color" />

        <TextView
            android:id="@+id/eyeColor"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/tittles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair_color" />

        <TextView
            android:id="@+id/hairColor"
            style="@style/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>